...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Username" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" id="ZIJ-gT-G43">
                                <rect key="frame" x="40" y="231" width="240" height="30"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
...
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Password" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" id="xcW-uX-YIa">
                                <rect key="frame" x="40" y="280" width="240" height="30"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
...
                                <animations/>
                                <color key="backgroundColor" red="0.62352941179999999" green="0.84705882349999995" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
                                <state key="normal" title="Login">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                                <animations/>
                                <color key="backgroundColor" red="0.62352941179999999" green="0.84705882349999995" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
                                <state key="normal" title="Sign Up">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                                <animations/>
                            </imageView>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="First" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" id="8jc-py-E4A">
                                <rect key="frame" x="40" y="231" width="105" height="30"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES"/>
...
                                </connections>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Last" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" id="JgS-vg-CRs">
                                <rect key="frame" x="175" y="231" width="105" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES"/>
...
                                </connections>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Email" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" id="MDb-5s-nEj">
                                <rect key="frame" x="40" y="284" width="240" height="30"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
...
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" heightSizable="YES"/>
                                <animations/>
                                <state key="normal" title="Already a User">
                                    <color key="titleColor" red="0.62352941179999999" green="0.84705882349999995" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
