...
                
                switch errorCode {
                case 100:
                    self.presentAlert("No Connection", message: "Please check network connection")
                    break
                case 202:
                    self.presentAlert("Username Taken", message: "Please pick different username")
                    break
                default:
                    self.presentAlert("Error", message: "Please try again later")
                    print(NSString(format: "Unhandled Error: %d", errorCode))
                    break
                }
...
